Important: read the README file for installation instructions and important information about YafaRay

This is an abbreviated list of changes. The full/detailed list of changes can be seen at:
* YafaRay Core code: https://github.com/YafaRay/Core/commits/master
* Blender Exporter (for Blender v2.7x): https://github.com/YafaRay/Blender-Exporter/commits/master


YafaRay v3.4.2 (2020-05-04) for Blender 2.79:
---------------------------------------------
* Added Equirectangular camera.  `[Blender Exporter + Core]`


YafaRay v3.4.1a (2020-04-09) for Blender 2.79:
---------------------------------------------
* A few documentation changes to clarify bug reporting and Blender v2.79 release download `[Blender Exporter]`


YafaRay v3.4.1 (2020-04-08) for Blender 2.79:
---------------------------------------------
* Changed documentation to state that any bug reporting and resolution will solely be done in the GitHub Project "Issues" tab. Bugs in the old yafaray.org bugtracker will not be processed anymore. `[Blender Exporter + Core]`
* Added note about Blender-Exporter only working for Blender v2.7x versions. `[Blender Exporter + Core]`


YafaRay v3.4.0 (2020-03-22) for Blender 2.79:
---------------------------------------------
Note: don't mind the release date, the project has been mostly inactive for a long time, so only a few (although significant) changes since v3.3.0, but it was about time to give the last changes a proper release version number.

Feature changes/additions:
--------------------------
* Basic support for Image Sequences. `[Blender Exporter]`